# hotplace

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  ChangesLog.md  DEVNOTES.md  README.md  RELEASENOTE.md  env.mingw64  env.rockylinux  env.ubuntu  make.sh  msbuild.cmd  redist.msys
test/: CMakeLists.txt  README.md  test.hpp  test.sh
test/asn1/: CMakeLists.txt  sample.cpp  sample.hpp  test_asn1.cpp
test/authenticode/: CMakeLists.txt  sample.cpp  sample.hpp  trust.crt
test/base/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_bignumber.cpp  test_binary.cpp  test_bufferio.cpp  test_capacity.cpp  test_cmdline.cpp  test_consolecolor.cpp  test_datetime.cpp  test_dumpmemory.cpp  test_endian.cpp  test_ieee754.cpp  test_loglevel.cpp  test_map.cpp  test_merge.cpp  test_mlfq.cpp  test_nostd.cpp  test_shared.cpp  test_signalwait_threads.cpp  test_stream.cpp  test_string.cpp  test_unittest.cpp  test_valist.cpp  test_variant.cpp
test/bufferio/: CMakeLists.txt  sample.cpp  sample.hpp  test_bufferio.cpp
test/cbor/: sample.cpp  sample.hpp  test_parse.cpp  test_rfc7049.cpp  test_rfc7049_table4.cpp  testcase_rfc7049.cpp
test/cmdline/: CMakeLists.txt  sample.cpp  sample.hpp  test_cmdline.cpp
test/cose/: CMakeLists.txt  rfc8152_c_1_1.diag  rfc8152_c_2_1.diag  rfc8152_c_7_2.diag  rfc8778_a_1.diag  rfc9338_a_3_1.cbor  rfc9338_a_5_1.cbor  rfc9338_a_6_1.cbor  sample.cpp  sample.hpp  test_cose.cpp  test_eckey.cpp  test_examples.cpp  test_resource.cpp  test_rfc8152.cpp  test_rfc8392.cpp  testcase_examples.cpp  testvector.cpp
test/crypto/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_aead_ccm.cpp  test_aes_cbc_hmac_sha2.cpp  test_cbc_hmac.cpp  test_cbc_hmac_rfc7516.cpp  test_cbc_hmac_tls.cpp  test_cipher_encrypt.cpp  test_crypto_aead.cpp  test_crypto_encrypt.cpp  test_crypto_key.cpp  test_curves.cpp  test_encryption.cpp  test_features.cpp  test_openssl_crypt.cpp  test_random.cpp  test_resources.cpp  test_rfc3394.cpp  test_rfc7516.cpp  test_rfc7539.cpp  test_validate_resources.cpp  testvector.cpp  testvector_aes.cpp  testvector_cbchmac_jose.cpp  testvector_cbchmac_tls.cpp  testvector_rfc3394.cpp  testvector_rfc7539.cpp
test/datetime/: CMakeLists.txt  sample.cpp  sample.hpp  test_time.cpp
test/dtlsserver/: CMakeLists.txt  README.md  run_server.cpp  sample.cpp  sample.hpp  server.key
test/ecdsa/: CMakeLists.txt  sample.cpp
test/encode/: CMakeLists.txt  sample.cpp  sample.hpp  tesst_huffman.cpp  test_base16.cpp  test_base64.cpp  test_huffman.cpp  testcase_base16.cpp  testcase_base64.cpp  testcase_huffman.cpp
test/encoder/: CMakeLists.txt
test/etc/: CMakeLists.txt  dtlsclient.cpp  start.cpp  tcpclient.cpp  tlsclient.cpp  udpclient.cpp  varstring.cpp
test/graph/: CMakeLists.txt  README.md  graph_directed.graphml  graph_undirected.graphml  sample.cpp  sample.hpp  test_graph.cpp
test/hash/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_hash.cpp  test_openssl_hash.cpp  test_rfc4226.cpp  test_rfc4231.cpp  test_rfc4493.cpp  test_rfc6238.cpp  test_transcript_hash.cpp  testvector.cpp
test/hpack/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_h2.cpp  test_huffman.cpp  test_rfc7541.cpp
test/httpaltsvc/: CMakeLists.txt  README.md  run_server.cpp  sample.cpp  sample.hpp
test/httpauth/: CMakeLists.txt  index.html  run_server.cpp  sample.cpp  sample.hpp  server.crt  style.css
test/httpget/: CMakeLists.txt  sample.cpp
test/httpserver/: CMakeLists.txt  index.html  sample.cpp  server.key  signin.html
test/httpserver1/: CMakeLists.txt  README.md  run_server.cpp  sample.cpp  sample.hpp
test/httpserver2/: CMakeLists.txt  README.md  index.html  run_server.cpp  sample.cpp  sample.hpp  server.crt  style.css
test/httpserver2t/: run_server.cpp
test/httpserver3/: CMakeLists.txt  README.md  index.html  run_server.cpp  sample.cpp  sample.hpp
test/httpserver4/: CMakeLists.txt  sample.cpp  sample.hpp
test/httptest/: CMakeLists.txt  sample.cpp  sample.hpp  test_http.cpp  test_http2.cpp  test_http2_frame.cpp  test_httptest.cpp  testvector_http2.cpp
test/ieee754/: CMakeLists.txt  sample.cpp  sample.hpp  test_ieee754.cpp
test/incubator/: CMakeLists.txt  ca.crt  sample.cpp  server.crt  server.key
test/io/: CMakeLists.txt  sample.cpp  sample.hpp
test/ipaddr/: CMakeLists.txt  sample.cpp  sample.hpp  test_acl.cpp
test/jose/: CMakeLists.txt  example1.json  example2.json  example3.json  rfc7515.jwk  rfc7515.pem  rfc7516_A4.jws  rfc7520_6.jwk  rfc7520_figure118.jwe  rfc7520_figure119.jwe  rfc7520_figure137.json  rfc7520_figure149.json  rfc7520_figure150.json  rfc7520_figure160.jwe  rfc7520_figure161.jwe  rfc7520_figure171.jwe  rfc7520_figure183.jwe  rfc7520_figure22.json  rfc7520_figure221.json  rfc7520_figure236.jwe  rfc7520_figure238.jwe  rfc7520_figure28.jws  rfc7520_figure49.json  rfc7520_figure55.jws  rfc7520_figure71.jws  rfc7520_figure93.json  rfc7520_figure94.jwe  rfc7638_3.jwk  rfc8037_A_ed25519.jwk  sample.cpp  sample.hpp  test_rfc7515.cpp  test_rfc7516.cpp  test_rfc7517.cpp  test_rfc7518.cpp  test_rfc7520.cpp  test_rfc7638.cpp  test_rfc8037.cpp  testcase_rfc7515.cpp  testcase_rfc7517.cpp  (+3 more)
test/kdf/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_hkdf.cpp  test_rfc4615.cpp  test_rfc5869.cpp  test_rfc6070.cpp  test_rfc7914.cpp  test_rfc9106.cpp
test/key/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_crypto_key.cpp  test_curves.cpp  test_der.cpp  test_dh.cpp  test_dsa.cpp  test_ec.cpp  test_eckey_compressed.cpp  test_ffdhe.cpp  test_hpke.cpp  test_keyexchange.cpp  test_mlkem.cpp  test_rsa.cpp
test/linux/: CMakeLists.txt  sample.cpp
test/mlfq/: CMakeLists.txt  sample.cpp  sample.hpp  test_mlfq.cpp
test/net/: CMakeLists.txt  sample.cpp  sample.hpp
test/netclient/: README.md  sample.cpp  sample.hpp  test_netclient.cpp
test/netserver/: CMakeLists.txt  sample.cpp
test/nostd/: CMakeLists.txt  README.md  sample.cpp  sample.hpp  test_avl.cpp  test_btree.cpp  test_exception.cpp  test_findlte.cpp  test_list.cpp  test_map.cpp  test_nostd.cpp  test_ovl.cpp  test_pq.cpp  test_range.cpp  (+1 more)
testapplet/: CMakeLists.txt
(+3149 files in other folders)
